# circular-buffer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
benchmarks/: CMakeLists.txt  Writer.cpp
include/: Aliases.hpp  CircularBuffer.hpp  Defines.hpp  Macros.hpp  Message.hpp  SemLock.hpp  SemaphoreLock.hpp  SharedMemory.hpp  SharedMemoryRegion.hpp  Utils.hpp
include/CircularBuffer/: Aliases.hpp  IWrapper.hpp  Indices.hpp  Spec.hpp  Writer.hpp
include/circularbuffer/: Aliases.hpp  IWrapper.hpp  Indices.hpp  Macros.hpp  Reader.hpp  SemaphoreLock.hpp  SharedMemory.hpp  Spec.hpp  State.hpp  Utils.hpp  Writer.hpp
lib/: CMakeLists.txt
src/: Message.cpp  SemLock.cpp  SemaphoreLock.cpp  SharedMemory.cpp  SharedMemoryRegion.cpp
src/CircularBuffer/: IWrapper.cpp  Reader.cpp  Writer.cpp
src/circularbuffer/: IWrapper.cpp  Reader.cpp  SemaphoreLock.cpp  SharedMemory.cpp  Utils.cpp  Writer.cpp
tests/: CMakeLists.txt  CircularBuffer.cpp  Message.cpp  Reader.cpp  Reader.hpp  SemLock.cpp  SemaphoreLock.cpp  SharedMemory.cpp  SharedMemoryRegion.cpp  Utils.cpp  Utils.hpp  Writer.cpp  Writer.hpp
